fix(page tempalte): in small screens one of the grids would wrap.

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -5877,7 +5877,7 @@ th, td {
     // flex-wrap: wrap;
   }
   @media (max-width: $screen-xs) {
-    // flex-wrap: wrap;
+    display: block;
   }
   .dtm-photo {
     grid-column: 1/3;
@@ -6616,7 +6616,7 @@ font-size: 1.125rem !important;
 .home-highlight4 {
   display: block;
   position: relative;
-  height: 400px;
+  height: 500px;
   width: 100%;
   border-radius: 2px;
   z-index: 0;
